<!--
  ~ Copyright 2019 Punch Through Design LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">ElectricSlides</string>
    <string name="charge_status">Charge Status</string>
    <string name="left_shoe">Left Shoe:</string>
    <string name="right_shoe">Right Shoe:</string>
    <string name="_0">0%</string>
    <string name="charging">Charging</string>
    <string name="daily">Daily</string>
    <string name="history">History</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="charge">Charge:</string>
    <string name="phone_charge_estimates">Phone Charge Estimates</string>
    <string name="total_phone_charge">Total Phone Charge:</string>
    <string name="charge_from_left_shoe">Charge From Left Shoe:</string>
    <string name="charge_from_right_shoe">Charge From Right Shoe:</string>
    <string name="_0_ma">0mAh</string>
    <string name="ble_playground">BLE Playground</string>
    <string name="config_left_shoe">Configure Left Shoe</string>
    <string name="config_right_shoe">Configure Right Shoe</string>
    <string name="weekly_power_generated">Weekly Power Generated</string>
    <string name="daily_power_generated">Daily Power Generated</string>
    <string name="historical_milestones">Historical Milestones</string>
    <string name="power_generated_to_date">Power Generated To Date:</string>
    <string name="_0_wh">0wH</string>
    <string name="power_generated_today">Power Generated Today</string>
    <string name="daily_milestones">Daily Milestones</string>
</resources>
